--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           id="searchId"
           placeholder="Search by location"
         />
-        <button type="submit" class="button" id="buttonId">Search</button>
+        <button type="submit" class="button" id="buttonId">SUBMIT</button>
       </section>
       <h2 id="suburb" class="location">Give your location to me</h2>
     </section>
