--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         />
         <button type="submit" class="button" id="buttonId">SUBMIT</button>
       </section>
-      <h2 id="suburb" class="location">Give your location to me</h2>
+      <h2 id="locationId" class="location">Give your location to me</h2>
     </section>
     <section class="message">
       <div class="today">
