--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <section>
-      <h1 class="title">WEATHER-BOT-3000</h1>
+      <h1 class="title"><a href="/">WEATHER-BOT-3000</a></h1>
       <section class="container">
         <div class="eyes">
           <div class="eyeOne"></div>
