es6 changes and error message

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="eyeTwo"></div>
         </div>
         <input
-          type="text"
+          type="search"
           name="search"
           id="searchId"
           placeholder="Search by location"
