--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h2 id="locationId" class="location">Calculating your location...</h2>
     </section>
     <section class="message">
-      <div class="today">
+      <div class="today" id="currentDayId">
         <p id="currentDay"></p>
         <p id="currentWeather">I predict that the weather will be...</p>
         <p id="currentTemp"></p>
