--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script type="module" src="js.js"></script>
-    <link rel="stylesheet" href="styles.css" />
+    <script type="module" src="/JS/main.js"></script>
+    <link rel="stylesheet" href="/CSS/styles.css" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
